--- a/Exchange/ExchangeServer/servertoc/toc.yml
+++ b/Exchange/ExchangeServer/servertoc/toc.yml
@@ -359,7 +359,7 @@
       href: ../client-connectivity/cannot-connect-to-re-enabled-mailbox.md
     - name: New appointments and contacts not synchronized to OWA
       href: ../client-connectivity/added-appointments-contacts-not-synchronized-to-owa.md
-    - name: 
+    - name: OST file sync issues
       href: ../client-connectivity/ost-sync-issues.md
     - name: Outlook Anywhere clients can't connect to server
       href: ../client-connectivity/outlook-anywhere-clients-not-connect-to-server.md
