CI-153762 create new article and add to TOC

--- a/SharePoint/SharePointOnline/onlinetoc/toc.yml
+++ b/SharePoint/SharePointOnline/onlinetoc/toc.yml
@@ -27,6 +27,8 @@
       href: ../administration/deleting-content-type-from-hub.md
     - name: Error when accessing SharePoint or OneDrive
       href: ../administration/error-accessing-sharepoint-onedrive.md
+    - name: Error 404 in OneDrive or SharePoint
+      href: ../administration/error-accessing-sharepoint-onedrive.md
     - name: Errors when connecting to SharePoint Online Management Shell
       href: ../administration/errors-connecting-to-management-shell.md
     - name: Exclude or remove sites from a SharePoint Online retention policy
