--- a/Microsoft365/compliance/compliancetoc/toc.yml
+++ b/Microsoft365/compliance/compliancetoc/toc.yml
@@ -79,7 +79,7 @@
       href: ../holds/cannot-update-calendar-items-from-owa-or-outlook-on-mac.md
     - name: Changes to IgnoreLegalHold
       href: ../holds/ignorelegalhold-not-available.md
-    - name: Litigation hold mailbox does't turn into inactive mailbox
+    - name: Litigation hold mailbox doesn't turn into inactive mailbox
       href: ../holds/litigation-hold-mailbox-not-turn-into-inactive.md
     - name: Restore In-Place and Litigation Hold
       href: ../holds/restore-in-place-litigation-hold.md
