--- a/Exchange/ExchangeOnline/onlinetoc/toc.yml
+++ b/Exchange/ExchangeOnline/onlinetoc/toc.yml
@@ -475,6 +475,8 @@
       href: ../public-folders/cannot-apply-read-unread-setting.md
     - name: Can't delete items
       href: ../public-folders/cannot-delete-items-public-folder.md
+    - name: Can't send email to public folder contact list
+      href: ../public-folders/cannot-send-email-to-contact-list-public-folder.md
     - name: MEPF synchronization issues
       href: ../public-folders/mepf-sync-failures-script.md
     - name: Public folder couldn't be mail-enabled
