CI-155568 update title for SEO

--- a/Office/Client/clienttoc/toc.yml
+++ b/Office/Client/clienttoc/toc.yml
@@ -1035,7 +1035,7 @@
           href: ../word/headers-footers-remain-after-remove-sensitivity-label.md
         - name: How to merge multiple documents
           href: ../word/merge-word-documents.md
-        - name: How to recover Word documents
+        - name: How to recover unsaved Word documents
           href: ../word/recover-lost-unsaved-corrupted-document.md
         - name: Image DPI is changed after you print to PDF
           href: ../word/image-dpi-change-after-print-to-pdf.md
