--- a/Exchange/ExchangeOnline/onlinetoc/toc.yml
+++ b/Exchange/ExchangeOnline/onlinetoc/toc.yml
@@ -387,6 +387,8 @@
       href: ../outlook-issues/connection-to-microsoft-exchange-is-unavailable-error.md
     - name: Control PST use and creation
       href: ../outlook-issues/control-pst-use.md
+    - name: Create and book a workspace
+      href: ../outlook-issues/create-book-workspace-outlook.md
     - name: Emails sent to wrong account if profile has many accounts
       href: ../outlook-issues/emails-sent-to-wrong-account-if-has-many-accounts.md
     - name: Encrypted connection unavailable
