--- a/Exchange/ExchangeOnline/onlinetoc/toc.yml
+++ b/Exchange/ExchangeOnline/onlinetoc/toc.yml
@@ -465,6 +465,8 @@
     items:
     - name: "\"550 5.7.13\" error when sending emails to MEPF"
       href: ../public-folders/cannot-send-emails-to-mail-enabled-public-folder.md
+    - name: Can't access contact list from public folder
+      href: ../public-folders/cannot-access-contact-list.md
     - name: Can't add or expand public folders
       href: ../public-folders/cannot-expand-add-public-folder.md
     - name: Can't add reviewer permission to calendars
