update the TOCs

--- a/Outlook/Client/clienttoc/toc.yml
+++ b/Outlook/Client/clienttoc/toc.yml
@@ -49,6 +49,8 @@
       href: ../calendaring/cannot-send-meeting-on-behalf-of-managers.md
     - name: Can't add an Internet calendar
       href: ../calendaring/cannot-add-an-internet-calendar.md
+    - name: Create and book a workspace in Outlook
+      href: /exchange/troubleshoot/outlook-issues/create-book-workspace-outlook?context=/outlook/troubleshoot/context/client-context
     - name: Create online meeting failed error
       href: ../calendaring/create-online-meeting-failed-error.md
     - name: Delegate can't create Skype or Teams meeting
