--- a/Outlook/Mac/mactoc/toc.yml
+++ b/Outlook/Mac/mactoc/toc.yml
@@ -29,6 +29,8 @@
       href: ../calendars/cannot-propose-a-new-time-for-a-meeting.md
     - name: Can't save a meeting as draft in Outlook for Mac via Office JS API
       href: ../calendars/cannot-save-meeting-as-draft-in-outlook-for-mac.md
+    - name: Create and book a workspace in Outlook
+      href: /exchange/troubleshoot/outlook-issues/create-book-workspace-outlook?context=/outlook/troubleshoot/context/mac-context
     - name: The Open Shared Calendar option is unavailable
       href: ../calendars/cannot-open-a-shared-calendar-in-outlook-2016.md
     - name: User with Free/Busy permission can't open another calendar
