fix image/format issue

--- a/Exchange/ExchangeServer/servertoc/toc.yml
+++ b/Exchange/ExchangeServer/servertoc/toc.yml
@@ -487,7 +487,7 @@
       href: ../mailflow/get-internet-mx-record-smtp-domain-with-nslookup.md
   - name: Migration
     items:
-    - name: Can’t access mailbox after adding mailbox server to a DAG
+    - name: Can't access mailbox after adding mailbox server to a DAG
       href: ../migration/cannot-access-move-mailbox.md
     - name: Can't move a mailbox to a database
       href: ../migration/error-move-mailbox-to-database-exchange-2010.md
