--- a/Outlook/Mobile/mobiletoc/toc.yml
+++ b/Outlook/Mobile/mobiletoc/toc.yml
@@ -4,7 +4,7 @@
   - name: Add-ins
     items:
     - name: Can't save items from Outlook for iOS to OneNote
-      href: /exchange/troubleshoot/cannot-save-to-onenote.md
+      href: ../add-ins/cannot-save-to-onenote.md
   - name: Calendars
     items:
     - name: Create and book a workspace in Outlook
