--- a/Microsoft365/compliance/compliancetoc/toc.yml
+++ b/Microsoft365/compliance/compliancetoc/toc.yml
@@ -71,6 +71,8 @@
       href: ../ediscovery/ediscovery-searches-are-queued-indefinitely.md
     - name: In-Place eDiscovery preview isn't available
       href: ../ediscovery/in-place-ediscovery-preview-not-available.md
+    - name: Resolve eDiscovery issues
+      href: ../ediscovery/resolve-ediscovery-issues.md
   - name: Holds
     items:
     - name: Can't delete messages
@@ -81,6 +83,8 @@
       href: ../holds/ignorelegalhold-not-available.md
     - name: Litigation Hold mailbox doesn't turn into inactive mailbox
       href: ../holds/litigation-hold-mailbox-not-turn-into-inactive.md
+    - name: eDiscovery hold errors
+      href: ../holds/resolve-ediscovery-hold-issues.md
     - name: Restore In-Place and Litigation Hold
       href: ../holds/restore-in-place-litigation-hold.md
     - name: Retention policy no longer works after a mailbox is moved
