CI 157046 Rbac check failed while review the deposition review on Records management

--- a/Microsoft365/compliance/compliancetoc/toc.yml
+++ b/Microsoft365/compliance/compliancetoc/toc.yml
@@ -97,6 +97,8 @@
       href: ../information-barriers/information-barriers-troubleshooting.md
   - name: MRM & Retention Policies
     items:
+    - name: Can't manage disposition reviews
+      href: ../mrm-rentention-policies/cannot-manage-disposition-reviews.md
     - name: Managed folders disappear
       href: ../mrm-rentention-policies/managed-folders-disappear.md
     - name: MRM and retention policies
