CI 156289 Checks to fix sign-in issues

--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -183,6 +183,8 @@
       href: ./known-issues/rooms-known-issues.md
   - name: Sign-in
     items:
+    - name: Can't sign in Teams
+      href: ./known-issues/cannot-sign-in-teams.md
     - name: Can't start Teams for Surface Hub from Microsoft Store
       href: ./known-issues/teams-for-surface-hub-wont-start-from-store.md
     - name: Sign-in error after password change
