--- a/SharePoint/SharePointOnline/onlinetoc/toc.yml
+++ b/SharePoint/SharePointOnline/onlinetoc/toc.yml
@@ -341,6 +341,8 @@
       href: ../sites/office-365-top-navigation-bar-displays-either-sites-or-newsfeed.md
     - name: Troubleshooting guide to OneDrive for Business sites stopped at provisioning stage
       href: ../sites/troubleshooting-guide-for-sites-stopped-at-provisioning.md
+    - name: Unable to delete a SharePoint site
+      href: ../sites/unable-to-delete-site.md
   - name: Synchronization
     items:
     - name: A synchronized file is moved to the recycle bin
