Migrate an article to Office 365 Admin

--- a/Microsoft365/admin/admintoc/toc.yml
+++ b/Microsoft365/admin/admintoc/toc.yml
@@ -237,6 +237,8 @@
       href: ../licensing/disabled-sway-tile-appear.md
     - name: Download office web apps server
       href: ../licensing/download-office-web-apps-server.md
+    - name: Error code 6031 when buying licenses
+      href: ../licensing/error-code-6031-buy-licenses-office-365.md
     - name: License issue when retain Online mailbox
       href: ../licensing/license-issue-when-retain-online-mailbox.md
     - name: Office 365 subscription automatic license renewal fails 
