--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -137,8 +137,6 @@
       href: ./meetings/issues-with-webinars.md
   - name: Mobile
     items:
-    - name: Can't make Teams calls with Apple CarPlay
-      href: ./mobile/cannot-make-teams-calls-carplay.md
     - name: Can't see auto-favorited channels in mobile app
       href: ./known-issues/cant-see-auto-favorited-channels-in-mobile.md
     - name: A website with Conditional Access doesn't display when viewed on the Website tab 
@@ -147,6 +145,8 @@
       href: ./known-issues/chrome-80-users-unable-to-sign-in-on-teams.md
     - name: Notifications and preview issues in iOS 13 Beta
       href: ./known-issues/problems-using-teams-on-ios-13-beta.md
+    - name: Settings for Teams calls with Apple CarPlay
+      href: ./mobile/settings-teams-calls-carplay.md
   - name: OneNote Integration
     items:
     - name: Can't upload or download OneNote file
