CI 158295 Help Article to identify cloud attachments in Outlook and Teams for retention

--- a/Microsoft365/compliance/compliancetoc/toc.yml
+++ b/Microsoft365/compliance/compliancetoc/toc.yml
@@ -95,10 +95,12 @@
     items:
     - name: Issues related to information barrier policies
       href: ../information-barriers/information-barriers-troubleshooting.md
-  - name: MRM & Retention Policies
+  - name: Retention
     items:
     - name: Can't manage disposition reviews
       href: ../mrm-rentention-policies/cannot-manage-disposition-reviews.md
+    - name: Can't retain cloud attachments
+      href: ../mrm-rentention-policies/cannot-retain-cloud-attachments.md
     - name: Managed folders disappear
       href: ../mrm-rentention-policies/managed-folders-disappear.md
     - name: MRM and retention policies
