--- a/SharePoint/SharePointOnline/onlinetoc/toc.yml
+++ b/SharePoint/SharePointOnline/onlinetoc/toc.yml
@@ -33,6 +33,8 @@
       href: ../administration/error-404-onedrive-sharepoint.md
     - name: Errors when connecting to SharePoint Online Management Shell
       href: ../administration/errors-connecting-to-management-shell.md
+    - name: Errors when you rename a SharePoint domain
+      href: ../administration/errors-when-renaming.md
     - name: Exclude or remove sites from a SharePoint Online retention policy
       href: ../administration/exclude-sites-from-retention-policy.md
     - name: Invalid URL error when clicking an online prompted link
