--- a/SharePoint/SharePointOnline/onlinetoc/toc.yml
+++ b/SharePoint/SharePointOnline/onlinetoc/toc.yml
@@ -35,6 +35,8 @@
       href: ../administration/errors-connecting-to-management-shell.md
     - name: Exclude or remove sites from a SharePoint Online retention policy
       href: ../administration/exclude-sites-from-retention-policy.md
+    - name: FAQ about SharePoint domain renames
+      href: ../administration/domain-rename-faq.md
     - name: Invalid URL error when clicking an online prompted link
       href: ../administration/promoted-link-invalid-url.md
     - name: Issue when browsing to a SharePoint site
