--- a/Office/Client/clienttoc/toc.yml
+++ b/Office/Client/clienttoc/toc.yml
@@ -737,7 +737,7 @@
           href: ../office-suite-issues/error-open-document.md
         - name: Error when you open files from SharePoint in Office client
           href: ../office-suite-issues/files-fail-to-open.md
-        - name: "This file cannot be saved" error
+        - name: "This file cannot be saved"
           href: ../office-suite-issues/file-cannot-be-saved.md
         - name: FAQ about Office Activation Wizard
           href: ../office-suite-issues/faq-about-office-activation-wizard.md
