--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -131,7 +131,7 @@
       href: ./teams-im-presence/issues-with-presence-in-outlook.md
   - name: Meetings
     items:
-    - name: Issues with chat
+    - name: Issues with meeting chat
       href: ./meetings/meeting-chat-issues.md
     - name: Issues with meeting recordings
       href: ./meetings/troubleshoot-meeting-recording-issues.md
