--- a/Office/Client/clienttoc/toc.yml
+++ b/Office/Client/clienttoc/toc.yml
@@ -293,6 +293,8 @@
           href: ../access/your-network-access-was-interrupted-error.md
     - name: Activation
       items:
+        - name: Activation error Trusted Platform Module malfunctioned
+          href: ../activation/tpm-malfunctioned.md
         - name: Can't activate Office on a new computer
           href: ../activation/cant-activate-on-new-computer.md
         - name: Can't verify the license for this product
