--- a/Office/Client/clienttoc/toc.yml
+++ b/Office/Client/clienttoc/toc.yml
@@ -309,6 +309,8 @@
           href: ../activation/issue-when-activate-office-from-office-365.md
         - name: Issue with changing Office 2010 product key
           href: ../activation/office-2010-product-key-change-error.md
+        - name: Microsoft 365 Apps activation network connection issues
+          href: ../activation/network-connection-issues.md
         - name: We can't sign you into your company portal
           href: ../activation/something-configured-fails-activating-office.md
     - name: End of Support
