--- a/Exchange/ExchangeOnline/onlinetoc/toc.yml
+++ b/Exchange/ExchangeOnline/onlinetoc/toc.yml
@@ -325,6 +325,8 @@
       href: ../move-or-migrate-mailboxes/different-type-of-active-directory-object-already-exists-error.md
     - name: Can't migrate IMAP mailboxes
       href: ../move-or-migrate-mailboxes/imap-mailbox-migration-fails.md
+    - name: Can't migrate on-premises mailbox with cloud-based archive
+      href: ../move-or-migrate-mailboxes/onboarding-remote-move-migration-fails.md
     - name: Can't see free/busy information
       href: ../move-or-migrate-mailboxes/cannot-see-free-busy-information.md
     - name: Can't view mailbox folders after an IMAP migration
