--- a/Office/Client/clienttoc/toc.yml
+++ b/Office/Client/clienttoc/toc.yml
@@ -311,6 +311,8 @@
           href: ../activation/office-2010-product-key-change-error.md
         - name: Microsoft 365 Apps activation network connection issues
           href: ../activation/network-connection-issues.md
+        - name: Office for Mac activation An unknown error has occurred
+          href: ../activation/mac-unknown-error.md
         - name: Sign in issues when activating Microsoft 365 Apps
           href: ../activation/sign-in-issues.md
         - name: We can't sign you into your company portal
