CI-157763 create new article and add to TOC

--- a/Office/Client/clienttoc/toc.yml
+++ b/Office/Client/clienttoc/toc.yml
@@ -313,6 +313,8 @@
           href: ../activation/aadsts9002313-invalid-request.md
         - name: Microsoft 365 Apps activation network connection issues
           href: ../activation/network-connection-issues.md
+        - name: Microsoft 365 Apps activation usage report issues
+          href: ../activation/activation-usage-report-issues.md
         - name: Office for Mac activation An unknown error has occurred
           href: ../activation/mac-unknown-error.md
         - name: Sign in issues when activating Microsoft 365 Apps
