--- a/Office/Client/clienttoc/toc.yml
+++ b/Office/Client/clienttoc/toc.yml
@@ -317,6 +317,8 @@
           href: ../activation/mac-unknown-error.md
         - name: Sign in issues when activating Microsoft 365 Apps
           href: ../activation/sign-in-issues.md
+        - name: Troubleshooting device-based licensing for Microsoft 365 Apps
+          href: ../activation/device-based-licensing.md
         - name: We can't sign you into your company portal
           href: ../activation/something-configured-fails-activating-office.md
     - name: End of Support
