--- a/Office/Client/clienttoc/toc.yml
+++ b/Office/Client/clienttoc/toc.yml
@@ -293,6 +293,8 @@
           href: ../access/your-network-access-was-interrupted-error.md
     - name: Activation
       items:
+        - name: Account or subscription verification errors activating Microsoft 365 Apps
+          href: ../activation/account-or-subscription-errors.md
         - name: Activation error Sorry, we are having some temporary server issues
           href: ../activation/temporary-server-issues.md
         - name: Activation error That Microsoft account doesn’t exist
