--- a/Office/Client/clienttoc/toc.yml
+++ b/Office/Client/clienttoc/toc.yml
@@ -323,6 +323,8 @@
           href: ../activation/0xcaa70007-and-0xcaa80000.md
         - name: Microsoft 365 Apps activation network connection issues
           href: ../activation/network-connection-issues.md
+        - name: Microsoft 365 Apps activation Product deactivated
+          href: ../activation/product-deactivated.md
         - name: Microsoft 365 Apps activation usage report issues
           href: ../activation/activation-usage-report-issues.md
         - name: Office for Mac activation An unknown error has occurred
