--- a/Office/Client/clienttoc/toc.yml
+++ b/Office/Client/clienttoc/toc.yml
@@ -321,6 +321,8 @@
           href: ../activation/aadsts9002313-invalid-request.md
         - name: Microsoft 365 Apps activation error codes 0xCAA70007 and 0xCAA80000
           href: ../activation/0xcaa70007-and-0xcaa80000.md
+        - name: Microsoft 365 Apps activation error There’s a problem with your account
+          href: ../activation/problem-with-your-account.md
         - name: Microsoft 365 Apps activation network connection issues
           href: ../activation/network-connection-issues.md
         - name: Microsoft 365 Apps activation usage report issues
