CI-157759 create new article and add to TOC

--- a/Office/Client/clienttoc/toc.yml
+++ b/Office/Client/clienttoc/toc.yml
@@ -289,6 +289,8 @@
           href: ../access/sqlconfigdatasource-access-system-dsn.md
         - name: Use the Workgroup Administrator utility
           href: ../access/use-workgroup-administrator-utility.md
+        - name: You currently have not been assigned an office license that includes the Office desktop apps
+          href: ../access/license-not-assigned.md
         - name: Your network access was interrupted when using a mapped drive
           href: ../access/your-network-access-was-interrupted-error.md
     - name: Activation
