--- a/Office/Client/clienttoc/toc.yml
+++ b/Office/Client/clienttoc/toc.yml
@@ -329,6 +329,8 @@
           href: ../activation/0xcaa70007-and-0xcaa80000.md
         - name: Microsoft 365 Apps activation error There’s a problem with your account
           href: ../activation/problem-with-your-account.md
+        - name: Microsoft 365 Apps activation error Your account doesn’t allow editing on a Mac
+          href: ../activation/doesnt-allow-editing-on-mac.md
         - name: Microsoft 365 Apps activation error Your organization has disabled this device
           href: ../activation/your-organization-disabled-this-device.md
         - name: Microsoft 365 Apps activation limits
