--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -107,6 +107,8 @@
       href: ./files/access-files-tab-errors.md
     - name: Can't open files in a chat window
       href: ./known-issues/do-not-have-access-to-this-file-teams.md
+    - name: Desktop app option is missing
+      href: ./files/desktop-app-option-missing.md
     - name: Downloaded documents open in protected view
       href: ./known-issues/download-documents-open-in-protected-view.md
     - name: Guest user can't access Files tab
