--- a/Exchange/ExchangeOnline/onlinetoc/toc.yml
+++ b/Exchange/ExchangeOnline/onlinetoc/toc.yml
@@ -471,7 +471,7 @@
       href: ../public-folders/cannot-expand-add-public-folder.md
     - name: Can't add reviewer permission to calendars
       href: ../public-folders/add-reviewer-permission-public-folder-calendar-powershell.md
-    - name: Can't copy, move, or import items to public folders
+    - name: Can't copy, move, or import many items to public folders
       href: ../public-folders/cannot-copy-move-import-items.md
     - name: Can't create migration endpoint
       href: ../public-folders/error-create-migration-endpoint.md
