--- a/Exchange/ExchangeOnline/onlinetoc/toc.yml
+++ b/Exchange/ExchangeOnline/onlinetoc/toc.yml
@@ -475,7 +475,7 @@
       href: ../public-folders/error-create-migration-endpoint.md
     - name: Can't delete items
       href: ../public-folders/cannot-delete-items-public-folder.md
-    - name: Can't finalize migration batch
+    - name: Can't finalize a migration batch
       href: ../public-folders/cannot-finalize-migration-batch.md
     - name: Can't send email to public folder contact list
       href: ../public-folders/cannot-send-email-to-contact-list-public-folder.md
