--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -175,6 +175,10 @@
         href: ./phone-system/direct-routing/issues-with-outbound-calls.md
       - name: Issues with SBC connectivity
         href: ./phone-system/direct-routing/sip-options-tls-certificate-issues.md
+    - name: SIP Gateway
+      items:
+      - name: Resolve common issues related to SIP Gateway
+        href: ./phone-system/sip-gateway/sip-gateway-issues.md    
   - name: Provisioning
     items:
     - name: Can't create a team 
