--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -183,10 +183,6 @@
       href: ./known-issues/deleting-team-also-deletes-group.md
     - name: Incorrect user listed as SharePoint site creator
       href: ./known-issues/wrong-teams-user-listed-as-site-creator.md
-  - name: Rooms
-    items:
-    - name: Known issues in Rooms
-      href: ./known-issues/rooms-known-issues.md
   - name: Sign-in
     items:
     - name: Can't start Teams for Surface Hub from Microsoft Store
@@ -227,6 +223,12 @@
       href: ./known-issues/task-buckets-do-not-appear-in-planner.md
     - name: Teams website tabs leads to customer confusion
       href: ./known-issues/website-tabs-cause-confusion-teams.md
+  - name: Teams devices and rooms
+    items:
+    - name: Collect device logs
+      href: ./Teams-devices-and-rooms/collect-device-logs.md
+    - name: Known issues in Rooms
+      href: ./known-issues/rooms-known-issues.md
   - name: Teams on Linux
     items: 
     - name: Known issues in Linux
