--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -175,10 +175,6 @@
         href: ./phone-system/direct-routing/issues-with-outbound-calls.md
       - name: Issues with SBC connectivity
         href: ./phone-system/direct-routing/sip-options-tls-certificate-issues.md
-    - name: SIP Gateway
-      items:
-      - name: Resolve common issues related to SIP Gateway
-        href: ./phone-system/sip-gateway/sip-gateway-issues.md    
   - name: Provisioning
     items:
     - name: Can't create a team 
@@ -187,10 +183,12 @@
       href: ./known-issues/deleting-team-also-deletes-group.md
     - name: Incorrect user listed as SharePoint site creator
       href: ./known-issues/wrong-teams-user-listed-as-site-creator.md
-  - name: Rooms
+  - name: Devices and rooms
     items:
     - name: Known issues in Rooms
       href: ./known-issues/rooms-known-issues.md
+    - name: Resolve common issues related to SIP Gateway
+      href: ./phone-system/sip-gateway/sip-gateway-issues.md
   - name: Sign-in
     items:
     - name: Can't start Teams for Surface Hub from Microsoft Store
