--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -225,7 +225,7 @@
       href: ./known-issues/website-tabs-cause-confusion-teams.md
   - name: Teams devices and rooms
     items:
-    - name: Collect device logs
+    - name: Collect Android Teams device logs
       href: ./Teams-devices-and-rooms/collect-device-logs.md
     - name: Known issues in Rooms
       href: ./known-issues/rooms-known-issues.md
