--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -95,7 +95,7 @@
       href: ./known-issues/exchange-users-cant-access-meetings.md
   - name: Exchange integration
     items:
-    - name: External federated contacts don’t appear in Teams search
+    - name: External federated contacts don't appear in Teams search
       href: ./exchange-integration/external-contacts-not-in-search.md
     - name: Teams and Exchange interaction issues
       href: ./exchange-integration/teams-exchange-interaction-issue.md
