--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -133,7 +133,7 @@
       href: ./teams-im-presence/issues-with-presence-in-outlook.md
   - name: Meetings
     items:
-    - name: External users appear as Unknown in meeting details
+    - name: External users appear as Unknown
       href: ./meetings/external-user-shown-as-unknown.md
     - name: Issues with meeting chat
       href: ./meetings/meeting-chat-issues.md
