--- a/SharePoint/SharePointOnline/onlinetoc/toc.yml
+++ b/SharePoint/SharePointOnline/onlinetoc/toc.yml
@@ -347,6 +347,8 @@
       href: ../Sites/top-navigation-bar-not-use-site-theme.md
     - name: Site is at or near the metadata limit
       href: ../sites/site-reached-metadata-limit.md
+    - name: Site storage notification emails for group-connected sites not received
+      href: ../sites/notification-email-not-received.md
     - name: Top navigation bar displays either Sites or Newsfeed instead of OneDrive
       href: ../sites/office-365-top-navigation-bar-displays-either-sites-or-newsfeed.md
     - name: Troubleshooting guide to OneDrive for Business sites stopped at provisioning stage
