--- a/Microsoft365/admin/admintoc/toc.yml
+++ b/Microsoft365/admin/admintoc/toc.yml
@@ -245,6 +245,10 @@
       href: ../licensing/subscription-license-renewal-fail.md
     - name: Use Office 365 PowerShell to manage Microsoft Planner licenses
       href: ../licensing/how-to-use-office-365-powershell-to-manage-microsoft-planner-licenses.md
+  - name: Lighthouse
+    items:
+    - name: Known issues with Microsoft 365 Lighthouse
+      href: ../lighthouse/lighthouse-known-issues.md
   - name: Miscellaneous
     items:
     - name: Can't connect to the Azure Information Protection service
