--- a/Microsoft365/admin/admintoc/toc.yml
+++ b/Microsoft365/admin/admintoc/toc.yml
@@ -247,7 +247,7 @@
       href: ../licensing/how-to-use-office-365-powershell-to-manage-microsoft-planner-licenses.md
   - name: Microsoft 365 Lighthouse
     items:
-    - name: Known issues with Microsoft 365 Lighthouse
+    - name: Known issues with Lighthouse
       href: ../microsoft-365-lighthouse/lighthouse-known-issues.md
   - name: Miscellaneous
     items:
