Update the article per Meera's comments

--- a/Exchange/ExchangeHybrid/hybridtoc/toc.yml
+++ b/Exchange/ExchangeHybrid/hybridtoc/toc.yml
@@ -247,7 +247,7 @@
     items:
     - name: Can't access legacy on-premises public folders
       href: ../public-folders/cannot-access-legacy-on-premises-public-folders.md
-    - name: Can't access on-premises PFs from Outlook for Mac
+    - name: Outlook for Mac users can't access on-premises PFs
       href: ../public-folders/outlook-for-mac-unable-access-public-folders.md
     - name: Credential prompt when accessing on-premises PFs
       href: ../public-folders/credential-prompt-access-on-premises-public-folders.md
