--- a/Outlook/Client/clienttoc/toc.yml
+++ b/Outlook/Client/clienttoc/toc.yml
@@ -559,7 +559,7 @@
           href: ../profiles-and-accounts/cannot-connect-web-service-not-working-migrated-to-office-365.md
         - name: Outlook fails to start
           href: ../profiles-and-accounts/starting-outlook-displays-error.md
-        - name: "Refresh Your PC without affecting your file" option deletes Outlook profile
+        - name: '"Refresh Your PC without affecting your file" option deletes Outlook profile'
           href: ../profiles-and-accounts/refresh-your-pc-without-affecting-your-file-deletes-profile.md
         - name: Remove automapping for shared mailbox
           href: ../profiles-and-accounts/remove-automapping-for-shared-mailbox.md
